# time-for

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile
.github/workflows/: create-gh-release.yml
src/: clapper.rs  ffmpeg.rs  lib.rs  main.rs  tenor.rs
