[package]
edition = "2021"
name = "time-for"
version = "0.1.1-alpha.2"
description = "A CLI program to generate GIFs containing the current time and the specified topic."
authors = ["Gaweringo"]
[dependencies]
arboard = "3.1.1"
chrono = "0.4.22"
reqwest = { version = "0.11.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.147", features = ["serde_derive"] }
serde_json = "1.0.87"
ordinal = "0.3.2"
tfc = "0.6.1"
spinners = "4.1.0"
rand = "0.8.5"
anyhow = "1.0.66"
clap = { version = "4.0.18", features = ["derive"] }
twelf = { version = "0.7.0", features = ["toml"] }
open = "3.0.3"
